--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body
     height: 45px;
     padding:0px;
     margin:0px;
+    z-index: 2;
 }
 .taskbartext{
     font-size: 28;
@@ -100,6 +101,8 @@ body
     bottom: 0px;
     width: 398px;
     height: 598px;
+
+    z-index: 2;
 }
 #startmenubanner{
     writing-mode: tb-rl;
@@ -145,45 +148,44 @@ body
 /*
     WINDOW
 */
-#windowcontainer{
-    width: 500px;
-    height: 500px;
-    border-right: 1px solid black;
-    border-top:1px solid #7d7b7d;
-    border-left: 1px solid #7d7b7d;
-    border-bottom:1px solid black;
-}
 #window{
-    width: 498px;
-    height: 498px;
     border-right: 1px solid #7d7b7d;
     border-top:1px solid white;
     border-left: 1px solid white;
     border-bottom:1px solid #7d7b7d;
+    position: absolute;
+    height: 300px;
+    width: 400px;
+    background-color: #bdbebd;
+    outline: 1px solid grey;
+    z-index: 1;
+    resize: both;
 
-    background-color:#bdbebd;
+  overflow: auto;
 }
+#windowheader {
+    
+    margin: 2px;
+    height: 31px;
+    cursor: move;
+    z-index: 10;
+    background-color: #00007b;
+    color: #fff;
+    font-size: 150%;
+    padding-left: 5px;
+  }
 #windowcontrolls{
     background-color: #00007b;
     height: 36px;
     margin: 2px;
 }
-#windowcontentcontainer{
-    border-top: 1px solid #7d7b7d;
-    border-left: 1px solid #7d7b7d;
-    border-bottom: 1px solid #ffffff;
-    border-right: 1px solid #ffffff;
-    margin: 3px;
-    height: 80%;
+.controlsImage{
+    float: right;
+    width: 100px;
+    padding-top: 2px;
+    padding-right: 1px;
 }
-#windowcontent{
-    border-top: 1px solid black;
-    border-left: 1px solid black;
-    border-bottom: 1px solid #bdbebd;
-    border-right: 1px solid #bdbebd;
-    background-color: #ffffff;
-    height: 100%;
-}
+
 #windowbuttons{
     margin: 4px;
     height: 28px;
